Added section previews

--- a/index.html
+++ b/index.html
@@ -3,18 +3,15 @@
   <head>
     <title>Rhys Williams</title>
     <link rel="stylesheet" type="text/css" href="/styles.css">
-    <link rel="stylesheet" type="text/css" href="//cdn-images.mailchimp.com/embedcode/classic-061523.css">
     <link rel="icon" href="/8bit.png">
   </head>
-  <body>
-    <div class="banner">
-      <nav>
-        <a href="/"><button>Home</button></a>
-        <a href="/news"><button>News</button></a>
-        <a href="https://linktr.ee/rhyswilliams" target="_blank"><button>Contact</button></a>
-        <a href="/more"><button>More</button></a>
-      </nav>
-    </div>
+  <body class="more-body">
+    <nav>
+      <a href="/"><button>Home</button></a>
+      <a href="/news"><button>News</button></a>
+      <a href="https://linktr.ee/rhyswilliams" target="_blank"><button>Contact</button></a>
+      <a href="/more"><button>More</button></a>
+    </nav>
     <div class="sidebar1">
       <a href="/"><img class="sb-logo" src="/images/logo.png"></a>
       <a href="/"><div class="sb-box" style="background-color: #b1abe0">Home</div></a>
@@ -28,71 +25,10 @@
       <a href="https://rhyswilliams.bandcamp.com/track/rain-demo" target="_blank"><div class="sb-box" style="background-color: #888682;">Rain (Demo)</div></a>
     </div>
     <main>
-      <p class="title-text">RHYS WILLIAMS</p>
-      <p class="descriptor">Singer, songwriter, producer, and multi-instrumentalist</p>
-      <div class="song-box-container">
-        <div class="song-box">
-          <br><img src="/images/springtime.jpg" class="song-icon">
-          <br><a href="https://rhyswilliams.bandcamp.com/track/springtime" target="_blank"><img src="/images/bandcamp.png" class="icon"></a>
-          <a href="https://soundcloud.com/rhyswilliams/springtime" target="_blank"><img src="/images/soundcloud.png" class="icon"></a>
-          <a href="https://youtu.be/xNwy5hwzKbA" target="_blank"><img src="/images/youtube.jpg" class="icon"></a>
-          <div class="song-box-info">
-            <p>Springtime</p>
-            <p>★★★☆☆</p>
-            <p>#092</p>
-          </div>
-          <p class="write-date">Aug 28, 2017</p>
-        </div>
-        <div class="song-box">
-          <br><img src="/images/youre-gone.jpg" class="song-icon">
-          <br><a href="https://rhyswilliams.bandcamp.com/track/youre-gone" target="_blank"><img src="/images/bandcamp.png" class="icon"></a>
-          <a href="https://soundcloud.com/rhyswilliams/youre-gone" target="_blank"><img src="/images/soundcloud.png" class="icon"></a>
-          <a href="https://youtu.be/mKC6StyvP3s" target="_blank"><img src="/images/youtube.jpg" class="icon"></a>
-          <div class="song-box-info">
-            <p>You're Gone</p>
-            <p>★★★★☆</p>
-            <p>#035</p>
-          </div>
-          <p class="write-date">Feb 16, 2015</p>
-        </div>
-        <div class="song-box">
-          <br><img src="/images/rain-demo.jpg" class="song-icon">
-          <br><a href="https://rhyswilliams.bandcamp.com/track/rain-demo" target="_blank"><img src="/images/bandcamp.png" class="icon"></a>
-          <a href="https://soundcloud.com/rhyswilliams/rain-demo" target="_blank"><img src="/images/soundcloud.png" class="icon"></a>
-          <a href="https://youtu.be/l-Ne2hvspPc" target="_blank"><img src="/images/youtube.jpg" class="icon"></a>
-          <div class="song-box-info">
-            <p>Rain (Demo)</p>
-            <p>★★★☆☆</p>
-            <p>#002</p>
-          </div>
-          <p class="write-date">Sep 15, 2008</p>
-        </div>
-      </div>
-      <div id="mc_embed_shell">
-        <div id="mc_embed_signup">
-          <form action="https://rhyswilliamsmusic.us11.list-manage.com/subscribe/post?u=83ae690584ca2311238b9198b&amp;id=7cc8367d50&amp;f_id=005c19e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-            <div id="mc_embed_signup_scroll">
-              <h2 style="margin-bottom: -10px;">Sign up for updates!</h2>
-              <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-              <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div>
-              <div id="mce-responses" class="clear foot">
-                <div class="response" id="mce-error-response"></div>
-                <div class="response" id="mce-success-response"></div>
-              </div>
-              <div aria-hidden="true" style="position: absolute; left: -5000px;">
-                /* real people should not fill this in and expect good things - do not remove this or risk form bot signups */
-                <input type="text" name="b_83ae690584ca2311238b9198b_7cc8367d50" tabindex="-1" value="">
-              </div>
-              <div class="optionalParent">
-                <div class="clear foot">
-                  <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
-                </div>
-              </div>
-            </div>
-          </form>
-        </div>
-        <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';fnames[6]='COMPANY';ftypes[6]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-      </div>  
+      <br><b>Travel</b><br>
+      <iframe style="border: none; margin:0px; margin-top: 10px; padding:0px; display:inline-block; width:300px; height:250px; overflow:hidden;" src="https://nomadmania.com/api/snippet/67032/s"></iframe>
+      <br><b>Mashups (coming soon)</b><br>
+      <br><b>Playlists (coming soon)</b><br>
     </main>
     <footer><p>© 2025 Rhys Williams. All Rights Reserved.</p></footer>
   </body>
