Added section previews

--- a/more/index.html
+++ b/more/index.html
@@ -27,6 +27,8 @@
     <main>
       <br><b>Travel</b><br>
       <iframe style="border: none; margin:0px; margin-top: 10px; padding:0px; display:inline-block; width:300px; height:250px; overflow:hidden;" src="https://nomadmania.com/api/snippet/67032/s"></iframe>
+      <br><b>Mashups (coming soon)</b><br>
+      <br><b>Playlists (coming soon)</b><br>
     </main>
     <footer><p>© 2025 Rhys Williams. All Rights Reserved.</p></footer>
   </body>
