Made album art clickable

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <p class="descriptor">Singer, songwriter, producer, and multi-instrumentalist</p>
       <div class="song-box-container">
         <div class="song-box">
-          <br><img src="/images/springtime.jpg" class="song-icon">
+          <br><a href="/images/springtime.jpg" target="_blank"><img src="/images/springtime.jpg" class="song-icon"></a>
           <br><a href="https://rhyswilliams.bandcamp.com/track/springtime" target="_blank"><img src="/images/bandcamp.png" class="icon"></a>
           <a href="https://soundcloud.com/rhyswilliams/springtime" target="_blank"><img src="/images/soundcloud.png" class="icon"></a>
           <a href="https://youtu.be/xNwy5hwzKbA" target="_blank"><img src="/images/youtube.jpg" class="icon"></a>
@@ -44,7 +44,7 @@
           <p class="write-date">Aug 28, 2017</p>
         </div>
         <div class="song-box">
-          <br><img src="/images/youre-gone.jpg" class="song-icon">
+          <br><a href="/images/youre-gone.jpg" target="_blank"><img src="/images/youre-gone.jpg" class="song-icon"></a>
           <br><a href="https://rhyswilliams.bandcamp.com/track/youre-gone" target="_blank"><img src="/images/bandcamp.png" class="icon"></a>
           <a href="https://soundcloud.com/rhyswilliams/youre-gone" target="_blank"><img src="/images/soundcloud.png" class="icon"></a>
           <a href="https://youtu.be/mKC6StyvP3s" target="_blank"><img src="/images/youtube.jpg" class="icon"></a>
@@ -56,7 +56,7 @@
           <p class="write-date">Feb 16, 2015</p>
         </div>
         <div class="song-box">
-          <br><img src="/images/rain-demo.jpg" class="song-icon">
+          <br><a href="/images/rain-demo.jpg" target="_blank"><img src="/images/rain-demo.jpg" class="song-icon"></a>
           <br><a href="https://rhyswilliams.bandcamp.com/track/rain-demo" target="_blank"><img src="/images/bandcamp.png" class="icon"></a>
           <a href="https://soundcloud.com/rhyswilliams/rain-demo" target="_blank"><img src="/images/soundcloud.png" class="icon"></a>
           <a href="https://youtu.be/l-Ne2hvspPc" target="_blank"><img src="/images/youtube.jpg" class="icon"></a>
