Added mashup links

--- a/more/index.html
+++ b/more/index.html
@@ -27,7 +27,18 @@
     <main>
       <br><b>Travel</b><br>
       <iframe style="border: none; margin:0px; margin-top: 10px; padding:0px; display:inline-block; width:300px; height:250px; overflow:hidden;" src="https://nomadmania.com/api/snippet/67032/s"></iframe>
-      <br><b>Mashups (coming soon)</b><br>
+      <br><b>Mashups</b><br>
+      <a href="https://youtu.be/jt7dtCIIqEk" target="_blank"><img src="./images/bon-impala.png" class="thumbnail"></a>
+      <a href="https://youtu.be/HnVIt2BSYRs" target="_blank"><img src="./images/chili.png" class="thumbnail"></a>
+      <a href="https://youtu.be/yW5dh3Of_So" target="_blank"><img src="./images/sugar-baby.png" class="thumbnail"></a>
+      <br><a href="https://youtu.be/lTwcWKVC8QU" target="_blank"><img src="./images/airplanes2.png" class="thumbnail"></a>
+      <a href="https://youtu.be/CP5KHoJsUAM" target="_blank"><img src="./images/coffinlovania.png" class="thumbnail"></a>
+      <a href="https://youtu.be/J7XOXM6dh4o" target="_blank"><img src="./images/thank-u-stranger.png" class="thumbnail"></a>
+      <br><a href="https://youtu.be/N5I-ZPWLMWs" target="_blank"><img src="./images/exploded-wrong-server.png" class="thumbnail"></a>
+      <a href="https://youtu.be/xy4Q-fyMIqA" target="_blank"><img src="./images/helloser.png" class="thumbnail"></a>
+      <a href="https://youtu.be/tHjH67QSiiI" target="_blank"><img src="./images/horses-in-the-back.png" class="thumbnail"></a>
+      <br><a href="https://youtu.be/_qc1kaFewv4" target="_blank"><img src="./images/ladies-resposted-wrong.png" class="thumbnail"></a>
+      <a href="https://youtu.be/BHdeS26htw4" target="_blank"><img src="./images/night-sky.png" class="thumbnail"></a>
       <br><b>Playlists (coming soon)</b><br>
     </main>
     <footer><p>© 2025 Rhys Williams. All Rights Reserved.</p></footer>
