--- a/more/index.html
+++ b/more/index.html
@@ -25,8 +25,69 @@
       <a href="https://rhyswilliams.bandcamp.com/track/rain-demo" target="_blank"><div class="sb-box" style="background-color: #888682;">Rain (Demo)</div></a>
     </div>
     <main>
-      <br><b>Travel</b><br>
+      <br><b>Travel</b><br><br>
       <iframe style="border: none; margin:0px; margin-top: 10px; padding:0px; display:inline-block; width:300px; height:250px; overflow:hidden;" src="https://nomadmania.com/api/snippet/67032/s"></iframe>
+      <nav style="display:inline-block;">
+        <b style="margin-left: 50px; font-size: 17px;">Countries Visited (UN+) [24/265]</b><br>
+        <ul style="margin-left: 50px; padding: 0; border: 1px black solid; border-radius: 5px;">
+          <input type="checkbox" id="country28" name="country28" value="Hong Kong" onclick="return false;">
+          <label for="country28" style="color: gray; text-decoration: line-through;"> Hong Kong</label><br>
+          <input type="checkbox" id="country27" name="country27" value="Mongolia" onclick="return false;">
+          <label for="country27" style="color: gray; text-decoration: line-through;"> Mongolia</label><br>
+          <input type="checkbox" id="country26" name="country26" value="Guatemala" onclick="return false;">
+          <label for="country26" style="color: gray; text-decoration: line-through;"> Guatemala</label><br>
+          <input type="checkbox" id="country25" name="country25" value="Belize" onclick="return false;">
+          <label for="country25" style="color: gray; text-decoration: line-through;"> Belize</label><br>
+          <input type="checkbox" id="country24" name="country24" value="Curaçao (2025)" checked onclick="return false;">
+          <label for="country24"> Curaçao (2025)</label><br>
+          <input type="checkbox" id="country23" name="country23" value="Bonaire (2025)" checked onclick="return false;">
+          <label for="country23"> Bonaire (2025)</label><br>
+          <input type="checkbox" id="country22" name="country22" value="Morocco (2024)" checked onclick="return false;">
+          <label for="country22"> Morocco (2024)</label><br>
+          <input type="checkbox" id="country21" name="country21" value="Puerto Rico (2023)" checked onclick="return false;">
+          <label for="country21"> Puerto Rico (2023)</label><br>
+          <input type="checkbox" id="country20" name="country20" value="Anguilla (2023)" checked onclick="return false;">
+          <label for="country20"> Anguilla (2023)</label><br>
+          <input type="checkbox" id="country19" name="country19" value="Saint Martin (2023)" checked onclick="return false;">
+          <label for="country19"> Saint Martin (2023)</label><br>
+          <input type="checkbox" id="country18" name="country18" value="Sint Maarten (2023)" checked onclick="return false;">
+          <label for="country18"> Sint Maarten (2023)</label><br>
+          <input type="checkbox" id="country17" name="country17" value="Turks and Caicos (2022)" checked onclick="return false;">
+          <label for="country17"> Turks and Caicos (2022)</label><br>
+          <input type="checkbox" id="country16" name="country16" value="Dominican Republic (2022)" checked onclick="return false;">
+          <label for="country16"> Dominican Republic (2022)</label><br>
+          <input type="checkbox" id="country15" name="country15" value="Czechia (2022)" checked onclick="return false;">
+          <label for="country15"> Czechia (2022)</label><br>
+          <input type="checkbox" id="country14" name="country14" value="Austria (2022)" checked onclick="return false;">
+          <label for="country14"> Austria (2022)</label><br>
+          <input type="checkbox" id="country13" name="country13" value="Portugal (2021)" checked onclick="return false;">
+          <label for="country13"> Portugal (2021)</label><br>
+          <input type="checkbox" id="country12" name="country12" value="Gibraltar (2021)" checked onclick="return false;">
+          <label for="country12"> Gibraltar (2021)</label><br>
+          <input type="checkbox" id="country11" name="country11" value="Spain (2021)" checked onclick="return false;">
+          <label for="country11"> Spain (2021)</label><br>
+          <input type="checkbox" id="country10" name="country10" value="Japan (2019)" checked onclick="return false;">
+          <label for="country10"> Japan (2019)</label><br>
+          <input type="checkbox" id="country9" name="country9" value="Vatican City (2019)" checked onclick="return false;">
+          <label for="country9"> Vatican City (2019)</label><br>
+          <input type="checkbox" id="country8" name="country8" value="Italy (2019)" checked onclick="return false;">
+          <label for="country8"> Italy (2019)</label><br>
+          <input type="checkbox" id="country7" name="country7" value="Switzerland (2017)" checked onclick="return false;">
+          <label for="country7"> Switzerland (2017)</label><br>
+          <input type="checkbox" id="country6" name="country6" value="Germany (2017)" checked onclick="return false;">
+          <label for="country6"> Germany (2017)</label><br>
+          <input type="checkbox" id="country5" name="country5" value="France (2017)" checked onclick="return false;">
+          <label for="country5"> France (2017)</label><br>
+          <input type="checkbox" id="country4" name="country4" value="Canada (2013)" checked onclick="return false;">
+          <label for="country4"> Canada (2013)</label><br>
+          <input type="checkbox" id="country3" name="country3" value="Bahamas (2007)" checked onclick="return false;">
+          <label for="country3"> Bahamas (2007)</label><br>
+          <input type="checkbox" id="country2" name="country2" value="Aruba (2005)" checked onclick="return false;">
+          <label for="country2"> Aruba (2005)</label><br>
+          <input type="checkbox" id="country1" name="country1" value="United States (2002)" checked onclick="return false;">
+          <label for="country1"> United States (2002)</label><br>
+        </ul>
+    </nav>
       <br><b>Mashups</b><br>
       <a href="https://youtu.be/jt7dtCIIqEk" target="_blank"><img src="./images/bon-impala.png" class="thumbnail"></a>
       <a href="https://youtu.be/HnVIt2BSYRs" target="_blank"><img src="./images/chili.png" class="thumbnail"></a>
