--- a/more/index.html
+++ b/more/index.html
@@ -88,36 +88,56 @@
           <label for="country1"> United States (2002)</label><br>
         </ul>
         <script>
-        const country24 = document.getElementById('country24');
-        country24.scrollIntoView();
+          const country24 = document.getElementById('country24');
+          country24.scrollIntoView();
         </script>
       </nav>
       <br><b>Mashups</b><br>
       <a href="https://youtu.be/jt7dtCIIqEk" target="_blank"><img src="./images/bon-impala.png" class="thumbnail"></a>
       <a href="https://youtu.be/HnVIt2BSYRs" target="_blank"><img src="./images/chili.png" class="thumbnail"></a>
       <a href="https://youtu.be/yW5dh3Of_So" target="_blank"><img src="./images/sugar-baby.png" class="thumbnail"></a>
-      <br><a href="https://youtu.be/lTwcWKVC8QU" target="_blank"><img src="./images/airplanes2.png" class="thumbnail"></a>
-      <a href="https://youtu.be/CP5KHoJsUAM" target="_blank"><img src="./images/coffinlovania.png" class="thumbnail"></a>
-      <a href="https://youtu.be/J7XOXM6dh4o" target="_blank"><img src="./images/thank-u-stranger.png" class="thumbnail"></a>
-      <br><a href="https://youtu.be/N5I-ZPWLMWs" target="_blank"><img src="./images/exploded-wrong-server.png" class="thumbnail"></a>
-      <a href="https://youtu.be/xy4Q-fyMIqA" target="_blank"><img src="./images/helloser.png" class="thumbnail"></a>
-      <a href="https://youtu.be/tHjH67QSiiI" target="_blank"><img src="./images/horses-in-the-back.png" class="thumbnail"></a>
-      <br><a href="https://youtu.be/_qc1kaFewv4" target="_blank"><img src="./images/ladies-resposted-wrong.png" class="thumbnail"></a>
-      <a href="https://youtu.be/BHdeS26htw4" target="_blank"><img src="./images/night-sky.png" class="thumbnail"></a>
+      <span id="dots"></span>
+      <span id="more" style="display: none;">
+        <br><a href="https://youtu.be/lTwcWKVC8QU" target="_blank"><img src="./images/airplanes2.png" class="thumbnail"></a>
+        <a href="https://youtu.be/CP5KHoJsUAM" target="_blank"><img src="./images/coffinlovania.png" class="thumbnail"></a>
+        <a href="https://youtu.be/J7XOXM6dh4o" target="_blank"><img src="./images/thank-u-stranger.png" class="thumbnail"></a>
+        <br><a href="https://youtu.be/N5I-ZPWLMWs" target="_blank"><img src="./images/exploded-wrong-server.png" class="thumbnail"></a>
+        <a href="https://youtu.be/xy4Q-fyMIqA" target="_blank"><img src="./images/helloser.png" class="thumbnail"></a>
+        <a href="https://youtu.be/tHjH67QSiiI" target="_blank"><img src="./images/horses-in-the-back.png" class="thumbnail"></a>
+        <br><a href="https://youtu.be/_qc1kaFewv4" target="_blank"><img src="./images/ladies-resposted-wrong.png" class="thumbnail"></a>
+        <a href="https://youtu.be/BHdeS26htw4" target="_blank"><img src="./images/night-sky.png" class="thumbnail"></a>
+      </span>
+      <br><button onclick="showMore()" id="myBtn">Show more</button>
+      <script>
+        function showMore() {
+          var dots = document.getElementById("dots");
+          var moreText = document.getElementById("more");
+          var btnText = document.getElementById("myBtn");
+          if (dots.style.display === "none") {
+            dots.style.display = "inline";
+            btnText.innerHTML = "Show more";
+            moreText.style.display = "none";
+          } else {
+            dots.style.display = "none";
+            btnText.innerHTML = "Show less";
+            moreText.style.display = "inline";
+          }
+        }
+      </script>
       <br><br><b>Playlists</b><br><br>
       <button onclick="toggle(this)" style="width: 100%; text-align: left;">▼ Standard Playlists</button>
       <script>
-      let toggle = button => {
-        let element = document.getElementById("playlists-standard");
-        let hidden = element.getAttribute("hidden");
-        if (hidden) {
-          element.removeAttribute("hidden");
-          button.innerText = "▼ Standard Playlists";
-        } else {
-          element.setAttribute("hidden", "hidden");
-          button.innerText = "▶ Standard Playlists";
+        let toggle = button => {
+          let element = document.getElementById("playlists-standard");
+          let hidden = element.getAttribute("hidden");
+          if (hidden) {
+            element.removeAttribute("hidden");
+            button.innerText = "▼ Standard Playlists";
+          } else {
+            element.setAttribute("hidden", "hidden");
+            button.innerText = "▶ Standard Playlists";
+          }
         }
-      }
       </script>
       <section id="playlists-standard">
         <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3o4ydgEfTYHTXLYyRTUIF1?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe><br>
@@ -136,17 +156,17 @@
       </section>
       <button onclick="toggle2(this)" style="width: 100%; text-align: left;">▼ Music Scenes</button>
       <script>
-      let toggle2 = button => {
-        let element = document.getElementById("music-scenes");
-        let hidden = element.getAttribute("hidden");
-        if (hidden) {
-          element.removeAttribute("hidden");
-          button.innerText = "▼ Music Scenes";
-        } else {
-          element.setAttribute("hidden", "hidden");
-          button.innerText = "▶ Music Scenes";
+        let toggle2 = button => {
+          let element = document.getElementById("music-scenes");
+          let hidden = element.getAttribute("hidden");
+          if (hidden) {
+            element.removeAttribute("hidden");
+            button.innerText = "▼ Music Scenes";
+          } else {
+            element.setAttribute("hidden", "hidden");
+            button.innerText = "▶ Music Scenes";
+          }
         }
-      }
       </script>
       <section id="music-scenes">
         <div style="border-radius:12px; background-color:gray; margin-bottom: 10px;" width="100%" height="152px">ABC Islands (Mar 2025) [under review] </div>
@@ -159,17 +179,17 @@
       </section>
       <button onclick="toggle3(this)" style="width: 100%; text-align: left;">▼ World Traveler</button>
       <script>
-      let toggle3 = button => {
-        let element = document.getElementById("world-traveler");
-        let hidden = element.getAttribute("hidden");
-        if (hidden) {
-          element.removeAttribute("hidden");
-          button.innerText = "▼ World Traveler";
-        } else {
-          element.setAttribute("hidden", "hidden");
-          button.innerText = "▶ World Traveler";
+        let toggle3 = button => {
+          let element = document.getElementById("world-traveler");
+          let hidden = element.getAttribute("hidden");
+          if (hidden) {
+            element.removeAttribute("hidden");
+            button.innerText = "▼ World Traveler";
+          } else {
+            element.setAttribute("hidden", "hidden");
+            button.innerText = "▶ World Traveler";
+          }
         }
-      }
       </script>
       <section id="world-traveler">
         <div style="border-radius:12px; background-color:gray; margin-bottom: 10px;" width="100%" height="152px">MusicMania [WIP] </div>
