--- a/more/index.html
+++ b/more/index.html
@@ -25,7 +25,7 @@
       <a href="https://rhyswilliams.bandcamp.com/track/rain-demo" target="_blank"><div class="sb-box" style="background-color: #888682;">Rain (Demo)</div></a>
     </div>
     <main>
-      <br><b>Travel</b><br><br>
+      <br><b>Travel</b><br>
       <iframe style="border: none; margin:0px; margin-top: 10px; padding:0px; display:inline-block; width:300px; height:250px; overflow:hidden;" src="https://nomadmania.com/api/snippet/67032/s"></iframe>
       <nav style="display:inline-block;">
         <b style="margin-left: 50px; font-size: 17px;">Countries Visited (UN+) [24/265]</b><br>
@@ -124,7 +124,7 @@
           }
         }
       </script>
-      <br><br><b>Playlists</b><br><br>
+      <br><br><b>Playlists</b><br>
       <button onclick="toggle(this)" style="width: 100%; text-align: left;">▼ Standard Playlists</button>
       <script>
         let toggle = button => {
