--- a/more/index.html
+++ b/more/index.html
@@ -169,7 +169,7 @@
         }
       </script>
       <section id="music-scenes">
-        <div style="border-radius:12px; background-color:gray; margin-bottom: 10px;" width="100%" height="152px">ABC Islands (Mar 2025) [under review] </div>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1Ekxw7if0qGhhbT5nQGLow?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe><br>
         <div style="border-radius:12px; background-color:gray; margin-bottom: 10px;" width="100%" height="152px">Puerto Rico (Nov 2024) [under review] </div>
         <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4lcj5sAwvVtvf8iG6X8xbH?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2xs7r1VIY1yPouc8oANdDI?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe><br>
