--- a/more/index.html
+++ b/more/index.html
@@ -28,16 +28,16 @@
       <br><b>Travel</b><br>
       <iframe style="border: none; margin:0px; margin-top: 10px; padding:0px; display:inline-block; width:300px; height:250px; overflow:hidden;" src="https://nomadmania.com/api/snippet/67032/s"></iframe>
       <nav style="display:inline-block;">
-        <b style="margin-left: 50px; font-size: 17px;">Countries Visited (UN+) [24/265]</b><br>
-        <ul style="margin-left: 50px; padding: 0; border: 1px black solid; border-radius: 5px;" onload="scrollTo(country24)">
+        <b style="margin-left: 50px; font-size: 17px;">Countries Visited (UN+) [25/265]</b><br>
+        <ul style="margin-left: 50px; padding: 0; border: 1px black solid; border-radius: 5px;" onload="scrollTo(country25)">
           <input type="checkbox" id="country28" name="country28" value="Hong Kong" onclick="return false;">
           <label for="country28" style="color: gray; text-decoration: line-through;"> Hong Kong</label><br>
           <input type="checkbox" id="country27" name="country27" value="Mongolia" onclick="return false;">
           <label for="country27" style="color: gray; text-decoration: line-through;"> Mongolia</label><br>
-          <input type="checkbox" id="country26" name="country26" value="Guatemala" onclick="return false;">
-          <label for="country26" style="color: gray; text-decoration: line-through;"> Guatemala</label><br>
-          <input type="checkbox" id="country25" name="country25" value="Belize" onclick="return false;">
-          <label for="country25" style="color: gray; text-decoration: line-through;"> Belize</label><br>
+          <input type="checkbox" id="country26" name="country26" value="Belize" onclick="return false;">
+          <label for="country26" style="color: gray; text-decoration: line-through;"> Belize</label><br>
+          <input type="checkbox" id="country25" name="country25" value="Guatemala (2025)" checked onclick="return false;">
+          <label for="country25"> Guatemala (2025)</label><br>
           <input type="checkbox" id="country24" name="country24" value="Curaçao (2025)" checked onclick="return false;">
           <label for="country24"> Curaçao (2025)</label><br>
           <input type="checkbox" id="country23" name="country23" value="Bonaire (2025)" checked onclick="return false;">
