--- a/more/index.html
+++ b/more/index.html
@@ -29,7 +29,7 @@
       <iframe style="border: none; margin:0px; margin-top: 10px; padding:0px; display:inline-block; width:300px; height:250px; overflow:hidden;" src="https://nomadmania.com/api/snippet/67032/s"></iframe>
       <nav style="display:inline-block;">
         <b style="margin-left: 50px; font-size: 17px;">Countries Visited (UN+) [25/265]</b><br>
-        <ul style="margin-left: 50px; padding: 0; border: 1px black solid; border-radius: 5px;" onload="scrollTo(country25)">
+        <ul style="margin-left: 50px; padding: 0; border: 1px black solid; border-radius: 5px;">
           <input type="checkbox" id="country28" name="country28" value="Hong Kong" onclick="return false;">
           <label for="country28" style="color: gray; text-decoration: line-through;"> Hong Kong</label><br>
           <input type="checkbox" id="country27" name="country27" value="Mongolia" onclick="return false;">
@@ -88,8 +88,8 @@
           <label for="country1"> United States (2002)</label><br>
         </ul>
         <script>
-          const country24 = document.getElementById('country24');
-          country24.scrollIntoView();
+          const country25 = document.getElementById('country25');
+          country25.scrollIntoView();
         </script>
       </nav>
       <br><b>Mashups</b><br>
